# K-means

./: CMakeLists.txt  linuxBuild.sh  main.cpp
Algorithm/: Algorithm.cpp  Algorithm.h
CSVRow/: CMakeLists.txt  CSVRow.h
Node/: CMakeLists.txt  Cluster.cpp  Cluster.h  Node.cpp  Node.h
Resources/: iris.txt
